kubernetes/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
