kubernetes/springboot-networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-networking
spec:
  rules:
  - host: handwriting-recogniser-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 80
